EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Term__c/fields/hed__End_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__End_Date__c</fullName>
    <description>The date this Term ends.</description>
    <inlineHelpText>La fecha en la que finaliza este plazo.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>