EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Term__c/fields/hed__Grading_Period_Sequence__c.field-meta.xml
<CustomField>
    <fullName>hed__Grading_Period_Sequence__c</fullName>
    <description>Indicates which Term this is. For example, enter &quot;1&quot; for the first quarter or semester, &quot;2&quot; for the second quarter or semester, etc.</description>
    <inlineHelpText>Indica para qué término es. Por ejemplo, ingrese &quot;1&quot; para el primer trimestre o semestre, &quot;2&quot; para el segundo trimestre o semestre, etc.</inlineHelpText>
    <label>Grading Period Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>