EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Term__c/fields/hed__Instructional_Days__c.field-meta.xml
<CustomField>
    <fullName>hed__Instructional_Days__c</fullName>
    <description>The total number of instructional days in this Term.</description>
    <inlineHelpText>El número total de días lectivos en este plazo.</inlineHelpText>
    <label>Instructional Days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>