EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Term__c/fields/hed__Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Type__c</fullName>
    <description>The type of Term, for example, Semester, Quarter, or School Year.</description>
    <inlineHelpText>El tipo de plazo, por ejemplo, Semestre, Trimestre o Curso lectivo.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Semester</fullName>
            </value>
            <value>
                <fullName>School Year</fullName>
            </value>
            <value>
                <fullName>Part of Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>